--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,9 @@ body {
 
 .item img:hover{
   cursor: pointer;
+  border-radius: 16px;
   transform: scale(1.3);
-  transition: all 0.9s;
+  transition: all 0.7s;
 }
 
 .item:nth-child(1) {
